--- a/index.html
+++ b/index.html
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Social Links</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="container">
-    <div class="image">
-      <img 
-      class="picture"
-      src="./assets/IMG_20240719_103144_549.jpg" 
-      width="150px"
-      height="150px"
-      alt="">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Social Links</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="image">
+        <img
+          class="picture"
+          src="./assets/IMG_20240719_103144_549.jpg"
+          width="150px"
+          height="150px"
+          alt=""
+        />
+      </div>
+      <div class="name"><h1>Awoyinka Opeyemi</h1></div>
+      <div class="location">Lagos, Nigeria</div>
+      <p>"Front-End developer and avid reader."</p>
+      <div class="links">
+        <a href="https://github.com/hoppYo" target="_blank" class="github"
+          >GitHub</a
+        >
+        <a
+          href="https://www.frontendmentor.io/profile/hoppYo"
+          target="_blank"
+          class="mentor"
+          >Frontend Mentor</a
+        >
+        <a href="" class="linkedin">LinkedIn</a>
+        <a href="https://x.com/hoppyd1st" target="_blank" class="twitter"
+          >Twitter</a
+        >
+        <a
+          href="https://www.instagram.com/hoppythe1st/"
+          target="_blank"
+          class="instagram"
+          >Instagram</a
+        >
+      </div>
     </div>
-    <div class="name"><h1>Awoyinka Opeyemi</h1>
-    </div>
-    <div class="location">Lagos, Nigeria</div>
-    <p>"Front-End developer and avid reader."</p>
-    <div class="links">
-      <a href="" class="github">GitHub</a>
-      <a href="" class="mentor">Frontend Mentor</a>
-      <a href="" class="linkedin">LinkedIn</a>
-      <a href="" class="twitter">Twitter</a>
-      <a href="" class="instagram">Instagram</a>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
